@@ -6,3 +6,4 @@ UserAgent.pm
 t/01basic.t
 t/02multi.t
 t/03chunks.t
+META.yml                                 Module meta-data (added by MakeMaker)
