@@ -1,6 +1,11 @@
 Revision history for POE::Component::Client::UserAgent
 ======================================================
 
+POE::Component::Client::UserAgent 0.06
+2004-09-03
+	- test fix since hotmail stopped redirecting
+        - Improve file:// support on some systems.
+
 POE::Component::Client::UserAgent 0.04
 2002-01-03
 	- bug fix in _pococ_ua_postback
